--- a/Learnings/Base.lproj/Main.storyboard
+++ b/Learnings/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="8z8-EF-lO5">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -70,6 +70,39 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="39" y="4"/>
+        </scene>
+        <!--Apple Pay View Controller-->
+        <scene sceneID="Fnt-Xq-Ne6">
+            <objects>
+                <viewController id="8z8-EF-lO5" customClass="ApplePayViewController" customModule="Learnings" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Fc2-Rr-Cf2">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NIW-6w-bOJ">
+                                <rect key="frame" x="20" y="743" width="353" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="UKl-BD-BHc"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Pay by Apple-Pay"/>
+                                <connections>
+                                    <action selector="payButtonTapped:" destination="8z8-EF-lO5" eventType="touchUpInside" id="ZNm-ad-1Y8"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="3cu-ZP-Y23"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="NIW-6w-bOJ" firstAttribute="leading" secondItem="3cu-ZP-Y23" secondAttribute="leading" constant="20" id="UC6-2j-c6U"/>
+                            <constraint firstItem="3cu-ZP-Y23" firstAttribute="trailing" secondItem="NIW-6w-bOJ" secondAttribute="trailing" constant="20" id="Ybn-rG-fdS"/>
+                            <constraint firstItem="3cu-ZP-Y23" firstAttribute="bottom" secondItem="NIW-6w-bOJ" secondAttribute="bottom" constant="30" id="vnP-U0-0Qh"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tW8-4A-bPE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="916" y="11"/>
         </scene>
     </scenes>
     <resources>
