--- a/Learnings/Base.lproj/Main.storyboard
+++ b/Learnings/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2gm-N6-GoY">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5oW-rH-gkV">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -204,6 +204,39 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3F2-Gp-J9l" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1954.9618320610687" y="10.563380281690142"/>
+        </scene>
+        <!--Authentication View Controller-->
+        <scene sceneID="N1j-i3-zJk">
+            <objects>
+                <viewController id="5oW-rH-gkV" customClass="AuthenticationViewController" customModule="Learnings" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="USn-4t-t0Z">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l4v-ak-sfh">
+                                <rect key="frame" x="12" y="761" width="369" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="rLN-NI-tux"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Verify"/>
+                                <connections>
+                                    <action selector="didTapVerify" destination="5oW-rH-gkV" eventType="touchUpInside" id="KPe-Te-ylc"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="vLc-sm-BGj"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="l4v-ak-sfh" firstAttribute="leading" secondItem="vLc-sm-BGj" secondAttribute="leading" constant="12" id="2cV-kf-EzV"/>
+                            <constraint firstItem="vLc-sm-BGj" firstAttribute="trailing" secondItem="l4v-ak-sfh" secondAttribute="trailing" constant="12" id="MGs-Un-Jmx"/>
+                            <constraint firstItem="vLc-sm-BGj" firstAttribute="bottom" secondItem="l4v-ak-sfh" secondAttribute="bottom" constant="12" id="oz3-Z6-SsB"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9WN-9L-GDs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2685" y="11"/>
         </scene>
     </scenes>
     <resources>
